--- a/SampleRoutingService/App.config
+++ b/SampleRoutingService/App.config
@@ -14,12 +14,18 @@
         </behavior>
       </serviceBehaviors>
     </behaviors>
+    <client>
+      <endpoint address="http://localhost:7000/DemoServices/SimpleEchoService"
+                binding="basicHttpBinding"
+                contract="*"
+                name="BasicHttp_SimpleEchoService"></endpoint>
+    </client>
     <services>
       <service name="System.ServiceModel.Routing.RoutingService"
                behaviorConfiguration="MySampleRoutingServiceBehaviour">
         <host>
           <baseAddresses>
-            <add baseAddress="http://7000/DemoServices/SampleRoutingService/" />
+            <add baseAddress="http://localhost:7000/DemoServices/SampleRoutingService/" />
           </baseAddresses>
         </host>
         <endpoint address=""
@@ -28,5 +34,17 @@
                   contract="System.ServiceModel.Routing.IRequestReplyRouter" />
       </service>
     </services>
+    <routing>
+      <filters>
+        <filter name="EchoServiceFilter"
+                filterType="Action"
+                filterData="http://routingdemo.com/IEchoService/GetData" />
+      </filters>
+      <filterTables>
+        <filterTable name="SampleRoutingServiceTable">
+          <add filterName="EchoServiceFilter" endpointName="BasicHttp_SimpleEchoService" />
+        </filterTable>
+      </filterTables>
+    </routing>
   </system.serviceModel>
 </configuration>
